# casper-forge-x402

./: .gitignore  BUILD_BRIEF.md  CLAUDE.md  CONTRIBUTING.md  DEMO_VIDEO_SCRIPT.md  Dockerfile  FUNDING_CHECKLIST.md  LICENSE  README.md  SUBMISSION.md  SUBMISSION_FORM_FIELDS.md  TECHNICAL_AMMO.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
contract/: Cargo.toml
contract/src/: main.rs
docs/: api-reference.html
scripts/: demo.sh  deploy-contract.sh
src/: client.ts  facilitator.ts  index.ts  middleware.ts
src/demo/: server.ts
src/rwa-agent/: agent.ts  analyzer.ts
src/test/: facilitator.test.ts  integration.test.ts  rwa-agent.test.ts
